--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "symfony/maker-bundle": "^1.1",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^4.0",
+        "symfony/security-guard": "^4.0",
+        "symfony/web-server-bundle": "^4.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
