--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,37 +4,32 @@ security:
             algorithm: bcrypt
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: ~ }
-        our_db_provider:
-            entity:
-                class: App\Entity\User
-                property: username
+#        in_memory: { memory: ~ }
+#        our_db_provider:
+#            entity:
+#                class: App\Entity\User
+#                property: username
+        api_key_user_provider:
+          entity:
+            class: App\Entity\User
+            property: apikey
                 # if you're using multiple entity managers
                 # manager_name: customer
     firewalls:
-        main:
-            anonymous: true
-            pattern:    ^/
-            http_basic: ~
-            provider: our_db_provider
         login:
-            pattern:  ^/api/login
+            pattern: ^/api/login
             stateless: true
             anonymous: true
             form_login:
-                check_path:               /api/login
-                success_handler:          lexik_jwt_authentication.handler.authentication_success
-                failure_handler:          lexik_jwt_authentication.handler.authentication_failure
-                require_previous_session: false
-                provider: our_db_provider
-
-        api:
-            pattern:   ^/api
-            stateless: true
-            guard:
-                authenticators:
-                    - lexik_jwt_authentication.jwt_token_authenticator
-                provider: our_db_provider
+              check_path: /api/login_check
+              success_handler: lexik_jwt_authentication.handler.authentication_success
+              failure_handler: lexik_jwt_authentication.handler.authentication_failure
+#        api:
+#          pattern: ^/api
+#          stateless: true
+#          guard:
+#            authenticators:
+#              - lexik_jwt_authentication.jwt_token_authenticator
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -52,5 +47,5 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-        #- { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        #- { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+        # - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        # - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
