--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "api-platform/api-pack": "^1.1",
         "lexik/jwt-authentication-bundle": "^2.4",
         "sensio/framework-extra-bundle": "^5.1",
+        "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
@@ -15,12 +16,14 @@
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^4.0",
         "symfony/security-guard": "^4.0",
-        "symfony/web-server-bundle": "^4.0",
+        "symfony/twig-bundle": "^4.0",
+        "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "symfony/dotenv": "^4.0"
+        "symfony/dotenv": "^4.0",
+        "symfony/web-server-bundle": "^4.0"
     },
     "config": {
         "preferred-install": {
